<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="at.fhooe.mc.festly.ActivityLocation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Festly_Ci"
            android:backgroundTint="@color/Festly_Ci"
            android:gravity="center"
            android:text="@string/activitylocation_header"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="65dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="153dp"
                android:layout_height="11dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/activitylocation_button_linz"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:background="@color/Festly_Ci"
                android:text="@string/activitylocation_linz"
                android:textColor="@color/white" />

            <Space
                android:layout_width="153dp"
                android:layout_height="11dp"
                android:layout_weight="1" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="153dp"
                android:layout_height="11dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/activitylocation_button_wien"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:background="@color/Festly_Ci"
                android:text="@string/activitylocation_wien"
                android:textColor="@color/white" />

            <Space
                android:layout_width="153dp"
                android:layout_height="11dp"
                android:layout_weight="1" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="153dp"
                android:layout_height="11dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/activitylocation_button_graz"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:background="@color/Festly_Ci"
                android:text="@string/activitylocation_graz"
                android:textColor="@color/white" />

            <Space
                android:layout_width="153dp"
                android:layout_height="11dp"
                android:layout_weight="1" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="53dp" />

        <TextView
            android:id="@+id/tv"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/Festly_Ci"
            android:backgroundTint="@color/Festly_Ci"
            android:gravity="center"
            android:text="@string/activitylocation_header_mode"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="69dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="153dp"
                android:layout_height="11dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/activitylocation_button_preparty"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:background="@color/Festly_Ci"
                android:text="@string/activitylocation_preparty"
                android:textColor="@color/white" />

            <Space
                android:layout_width="153dp"
                android:layout_height="11dp"
                android:layout_weight="1" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="276dp"
            android:layout_weight="1" />

    </LinearLayout>

</FrameLayout>